fixed hebrew title align in middle pane

--- a/packages/custom/icu/public/assets/css/_middlepane.scss
+++ b/packages/custom/icu/public/assets/css/_middlepane.scss
@@ -375,23 +375,23 @@
     }
 
     .noFocusLTR {
-        text-overflow: ellipsis;
-        text-align: left;
-        direction: rtl;
+        text-overflow: ellipsis #{"/*rtl:ignore*/"};
+        text-align: left #{"/*rtl:ignore*/"};
+        direction: rtl #{"/*rtl:ignore*/"};
         p {
-            text-overflow: ellipsis;
-            text-align: left;
-            direction: rtl;
+            text-overflow: ellipsis #{"/*rtl:ignore*/"};
+            text-align: left #{"/*rtl:ignore*/"};
+            direction: rtl #{"/*rtl:ignore*/"};
         }
     }
     .noFocusRTL {
-        text-overflow: ellipsis;
-        text-align: right;
-        direction: ltr;
+        text-overflow: ellipsis #{"/*rtl:ignore*/"};
+        text-align: right #{"/*rtl:ignore*/"};
+        direction: ltr #{"/*rtl:ignore*/"};
         p {
-            text-overflow: ellipsis;
-            text-align: right;
-            direction: ltr;
+            text-overflow: ellipsis #{"/*rtl:ignore*/"};
+            text-align: right #{"/*rtl:ignore*/"};
+            direction: ltr #{"/*rtl:ignore*/"};
         }
     }
 }
